--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Nikhil Yogeshwar</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst/Business Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span> 0-1 Year</span></p>
+										<p><span class="title-s">Experience: </span> <span> 0-3 Year</span></p>
 										<p><span class="title-s">Address: </span> <span>Bengaluru, India</span></p>
 									  </div>
 									</div>
@@ -329,7 +329,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2020-Present</span>
-						<h2>Assistant Business Manager</h2>
+						<h2> Business Analyst </h2>
 						<span class="position">Adishwar Creations PVT.LTD</span>
 						<p class="mt-4">This company is basically an wholesale-distributor . It mainly deals with textiles across india.  
 							<ul>
