--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Nikhil Yogeshwar Portfolio</title>
+    <title>Nikhil Yogeshwar's Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -333,9 +333,11 @@
 						<span class="position">Adishwar Creations PVT.LTD</span>
 						<p class="mt-4">This company is basically an wholesale-distributor . It mainly deals with textiles across india.  
 							<ul>
-								<li>Leveraged ms-excel to produce financial reports to help making business-decisions.</li>
-								<li>Played a vital role in analysing financial data,contributing to successful financial analysis for revenues & expences with 95% accuracy.</li>
-								<li>Developed interactive dashboards for sales reports. Led to 30% increase in sales convertion rate.</li>
+								<li>Analyzed large volumes of data to identify trends,patterns & business-relevent solutions with data visualizations.</li>
+								<li>Created dashboards, manipulating datasets & performing data analysis using SQL , Python ,Advanced Excel & Power BI.</li>
+								<li>Proficient in understanding the requirements and pro-actively propose impactful solutions/actionable insights/KPI's.</li>
+								<li>Worked directly with businessteamsto utilize metrics & analyze to determine improvement opportunities with stakeholders.</li>
+							</ul>
 							</ul>
 						</p>
 					</div>
