--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 						<span class="date">2020-Present</span>
 						<h2> Business Analyst </h2>
 						<span class="position">Adishwar Creations PVT.LTD</span>
-						<p class="mt-4">This company is basically an wholesale-distributor . It mainly deals with textiles across india.  
+						<p class="mt-4">This company is basically deals in clothing industry with product, distributor's & retailers across India.   
 							<ul>
 								<li>Analyzed large volumes of data to identify trends,patterns & business-relevent solutions with data visualizations.</li>
 								<li>Created dashboards, manipulating datasets & performing data analysis using SQL , Python ,Advanced Excel & Power BI.</li>
