--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Detail-oriented and analytical data professional with a strong foundation in statistical analysis, programming, and data visualization. Proven ability to derive actionable insights from complex datasets to drive informed business decisions. Adept at utilizing technical skills to solve real-world problems and contribute to organizational success. Eager to leverage expertise in [MS Excel/Sql/Python/Powerbi/Tableau] to enhance data-driven decision-making in a dynamic team environment.</p>
+            <p>Detail-oriented and analytical data professional with a strong foundation in data analysis, programming, and data visualization. Proven ability to derive actionable insights from complex datasets to drive informed business decisions. Adept at utilizing technical skills to solve real-world problems and contribute to organizational success. Eager to leverage expertise in [MS Excel/Sql/Python/Powerbi/Tableau] to enhance data-driven decision-making in a dynamic team environment.</p>
           </div>
         </div>
 
@@ -333,7 +333,7 @@
 						<span class="position">Adishwar Creations PVT.LTD</span>
 						<p class="mt-4">This company basically deals in clothing industry with product, distributor's & retailers across India.   
 							<ul>
-								<li>Analyzed large volumes of data to identify trends,patterns & business-relevent solutions with data visualizations.</li>
+								<li>Analyzed large volumes of data to identify trends,patterns & business-relevent solutions & decision making with data visualizations.</li>
 								<li>Created dashboards, manipulating datasets & performing data analysis using SQL , Python ,Advanced Excel & Power BI.</li>
 								<li>Proficient in understanding the requirements and pro-actively propose impactful solutions/actionable insights/KPI's.</li>
 								
